--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,12 @@
-Source: python-yowie
+Source: centrum-python-yowie
 Section: python
 Priority: optional
 Maintainer: CH content team <pg-content-dev@chconf.com>
 Build-Depends: cdbs (>= 0.4.41), debhelper (>= 5.0.37.2), python-dev, python-support (>= 0.3), python-setuptools, centrum-python-setuptoolsdummy
 Standards-Version: 3.7.2
 
-Package: python-yowie
+Package: centrum-python-yowie
+Provides: centrum-python-yowie
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python-django, python-setuptools (>= 0.6b1)
 Description: Utilities for safe reading Python file-like objects
